<resources>
    <string name="app_name">JABODETABEK Weather</string>
    <string name="daerah">Region</string>
    <string name="cuaca">Weather : %1$s</string>
    <string name="koordinat">Coordinate : %1$s</string>
    <string name="temperatur_rerate">Temperature : %1$s \u2103</string>
    <string name="temperatur_maks">Temperature Maks. : %1$s \u2103</string>
    <string name="temperatur_min">Temperature Min. : %1$s \u2103</string>
    <string name="tekanan">Pressure : %1$s hPa</string>
    <string name="kelembapan">Humidity : %1$s\%%</string>
    <string name="kecepatan_angin">Wind Speed : %1$s m/s</string>
    <string name="pengelihatan">Visibility : %1$s meter</string>
    <string name="pembaruan">Last Update : %1$s</string>
    <string name="tentang">About</string>
    <string name="isi_tentang">Muhammad Feril Bagus Perkasa \n 1706075054</string>
    <string name="segarkan">Refresh</string>
    <string name="status_koneksi">No connection</string>
    <string name="permission_message">Please turn on storage permission \n its needed to show data</string>
    <string name="nama">Feril</string>
    <string name="nomor_hoki">Lucky Number : %1$s</string>
</resources>