<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.InformasiCuacaDetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="97dp"
            android:layout_height="97dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textDetailDaerah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daerah"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.923" />

        <TextView
            android:id="@+id/textDetailKoordinat"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/koordinat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailDaerah"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/textDetailCuaca"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/cuaca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailKoordinat"
            app:layout_constraintVertical_bias="0.030" />

        <TextView
            android:id="@+id/textDetailTemperatur"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/temperatur_rerate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailCuaca"
            app:layout_constraintVertical_bias="0.040" />

        <TextView
            android:id="@+id/textDetailTemperaturMin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/temperatur_min"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailTemperatur"
            app:layout_constraintVertical_bias="0.040" />

        <TextView
            android:id="@+id/textDetailTemperaturMax"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/temperatur_maks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailTemperaturMin"
            app:layout_constraintVertical_bias="0.050" />

        <TextView
            android:id="@+id/textDetailTekanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tekanan"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.182"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailTemperaturMax"
            app:layout_constraintVertical_bias="0.051" />

        <TextView
            android:id="@+id/textDetailKelembaman"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/kelembapan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailTekanan"
            app:layout_constraintVertical_bias="0.050" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/kecepatan_angin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDetailKelembaman"
            app:layout_constraintVertical_bias="0.050" />

        <TextView
            android:id="@+id/textDetailPengelihatan"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/pengelihatan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.060" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>